Change button color.

--- a/css/layouts/marketing.css
+++ b/css/layouts/marketing.css
@@ -71,7 +71,7 @@ label {
  * I want my pure-button elements to look a little different
  */
 .pure-button {
-    background-color: #1f8dd6;
+    background-color: #FAAF40;
     color: white;
     padding: 0.5em 2em;
     border-radius: 5px;
