--- a/css/layouts/marketing.css
+++ b/css/layouts/marketing.css
@@ -27,6 +27,7 @@ label {
 .pure-img-responsive {
     max-width: 100%;
     height: auto;
+    border-radius: 50%;
 }
 
 /*
@@ -211,8 +212,8 @@ a.pure-button-primary {
 
 /* This is the class used for the dark-background areas. */
 .ribbon {
-    background: #2d3e50;
-    color: #aaa;
+    background: #FFF;
+    color: #7f8c8d;
 }
 
 /* This is the class used for the footer */
